Thu May 29 13:11:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputl, outputerrv): add fflush.

Thu May 29 12:30:33 2003  Joern Thyssen  <jth@gnubg.org>

	New toolbar button for changing direction of play.

	* gtkboard.c (board_init): draw new button.
	* gtkboard.c (toggle_clockwise): new function.
	* gtkboard.c (toggle_button_from_images): new function.	

	* gtkboard.c (game_set, board_set): move invalidation of arrow area 
	into board_set to avoid gtk warning.

Thu May 29 10:47:39 2003  Joern Thyssen  <jth@gnubg.org>

	Move position calculating routines to new file.

	* boardpos.c, Makefile.am: new file.
	* gtkboard.c, export.c: call new position calculating routines.	

Wed May 28 15:38:58 2003  Holger Bochnig  <hbgg@gmx.net>

	* gtkgame.c (ReportBug): change WWW address to report page

Tue May 27 18:04:16 2003  Holger Bochnig  <hbgg@gmx.net>

        * gtkboard.c (board_quick_edit, board_pointer): clicking on dice roll area
          in edit mode also sets who's on turn

Sat May 24 22:10:53 2003  Holger Bochnig  <hbgg@gmx.net>

        * configure.in, Makefile.am, m4/Makefile.am: add autoconf stuff for LibArt

Sat May 24 10:17:25 2003  Holger Bochnig  <hbgg@gmx.net>

        * dice.c, gnubg.c, gtkprefs.c, i18n.h, makehyper.c, makeweights.c, matchequity.c,
          play.c, set.c, show.c, sound.c, sound.h: changed some #ifdef to #if to follow
          config.h better

Fri May 23 19:06:12 2003  Holger Bochnig  <hbgg@gmx.net>

        * gnubg.c (NextTokenGeneral): fix for paths with spaces
        (suggested by Henrik Ravn)

Fri May 23 18:05:32 2003  Holger Bochnig  <hbgg@gmx.net>

        draw arrow to indicate direction of play and who is on turn:
                anti-aliased vector graphic in colour of player on turn
                on board frame between the two unused bearoff-points
        new dependency introduced: LibArt

        * export.c (GenerateImage), gtkprefs.c (Preview): call to CalculateArea changed